更新前端构建脚本

--- a/buildScript/vue/package.json
+++ b/buildScript/vue/package.json
@@ -4,11 +4,14 @@
   "description": "车图社",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack --config webpack.dev.js",
-    "watch": "webpack --config webpack.dev.js --watch",
+    "webpackdev": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server",
     "prod": "webpack --config webpack.prod.js",
-    "modern": "webpack --config webpack.modern.js",
-    "test": "test"
+    "static": "webpack --config webpack.static.js",
+    "gulpprod": "gulp prod",
+    "gulpdev": "gulp dev",
+    "dll": "gulp webpackDllTask",
+    "webpackdll": "webpack --config webpack.dll.config.js"
   },
   "author": "dxj",
   "license": "ISC",
@@ -20,23 +23,36 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.18.2",
+    "prettier-loader": "^3.3.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^2.1.3",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
   "browserslist": [
