--- a/buildScript/commen/package.json
+++ b/buildScript/commen/package.json
@@ -4,13 +4,13 @@
   "description": "车图社",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack --config webpack.dev.js",
-    "watch": "webpack --config webpack.dev.js --watch",
+    "dev": "webpack --config webpack.config.js",
     "prod": "webpack --config webpack.prod.js",
     "modern": "webpack --config webpack.modern.js",
     "test": "test",
     "gulpProd": "gulp prod",
-    "gulpDev": "gulp dev"
+    "gulpDev": "gulp dev",
+    "watch": "webpack-dev-server"
   },
   "author": "dxj",
   "license": "ISC",
@@ -22,28 +22,37 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-copy": "^4.0.1",
+    "gulp-uglify": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.4.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
+    "terser-webpack-plugin": "^2.1.3",
+    "url-loader": "^2.2.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.1.2",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-copy": "^4.0.1",
-    "gulp-uglify": "^3.0.2"
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "axios": "^0.18.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
     "vue": "^2.5.17",
     "vuex": "^3.0.1"
   },
